@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                URI-Title
-version:             1.81
+version:             1.82
 abstract:            ~
 license:             ~
 author:              ~
